tinkerign with css

--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
 <style>
 
+h2{
+  
+font-size: 70px
 
-html {
-  margin: auto;
-  width: auto;
 }
-h1
-p {
-  margin: auto;
-  width: auto;
-}
+
 
   </style>
