--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+
 <style>
+
+
+p{
+  text-align: center;
+font-size: 20px
+
+}
 
 h1{
 text-align: center;
@@ -6,8 +14,11 @@ font-size: 70px
 
 }
 
-font-family: 'Oswald', sans-serif;
+h2{
+text-align: center;
+font-size: 70px
 
+}
 
 
   </style>
