--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 
+
+
 <style>
 
 
+body{
+  text-align: center;
+
+
+}
+
 p{
   text-align: center;
-font-size: 20px
+font-size: 50px
 
 }
 
@@ -21,4 +29,11 @@ font-size: 70px
 }
 
 
+  </style>
+
+
+  <style>
+  body {
+  background-color: #C0C0C0
+  }
   </style>
